fixes annoying scrollbar bug in formtastic fieldsets

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -931,6 +931,7 @@ fieldset, form.formtastic fieldset {
 	margin-bottom: 25px;
 	padding: 0.5em;
 	padding-top: 10px;
+	overflow: hidden;
 }
 
 legend, form.formtastic legend {
